skeplib/tests/fixtures/sema_project/invalid/ambiguous_file_folder/a/dummy.sk
fn fb() -> Int { return 2; }
